# Portfolio-construction-and-optimization

./: .gitignore  OpenBB Walkthroughs.md  README.md  pyproject.toml
src/: 01_Stock_analysis.ipynb  02_CAPM.ipynb  03_Factor_analysis.ipynb  04_Fundamental_rank_stock_screener.ipynb  04_Technical_rank_stock_screener.ipynb  06_Optimization_of_portfolio.ipynb  06_Portfolio_optimization.ipynb  07_Stocks_causality.ipynb  08_Market_graph_structure.ipynb  09_Stock_financial_data.ipynb  Mean_variance_portfolio.ipynb
src/modules/: data_fetcher.py  multi_factor.py  portfolio_optimization.py  risk.py  screener.py  stock-symbols.py
