[tool.poetry]
name = "portfolio-construction-and-optimization"
version = "0.1.0"
description = ""
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "1.8.0"
statsmodels = "^0.13.5"
kucoin-python = "^1.0.11"
ta = "^0.10.2"
plotly = "^5.13.1"
nbformat = "^5.7.3"
matplotlib = "^3.7.1"
python-dotenv = "^1.0.0"
yfinance = "^0.2.12"
pymongo = "^4.3.3"
dnspython = "^2.3.0"
quantstats = "^0.0.59"
pyportfolioopt = "^1.5.4"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
scikit-learn = "^1.2.2"
yahoo-fin = "^0.8.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
