[tool.poetry]
name = "portfolio-construction-and-optimization"
version = "0.1.0"
description = ""
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.3"
scipy = "^1.10.1"
numpy = "^1.23.5"
statsmodels = "^0.14.0"
kucoin-python = "^1.0.11"
ta = "^0.10.2"
plotly = "^5.14.1"
nbformat = "^5.8.0"
matplotlib = "^3.7.1"
python-dotenv = "^1.0.0"
yfinance = "^0.2.12"
pymongo = "^4.3.3"
dnspython = "^2.3.0"
quantstats = "^0.0.59"
pyportfolioopt = "^1.5.4"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
scikit-learn = "^1.2.2"
yahoo-fin = "^0.8.9.1"
empyrial = "^2.0.1"
riskfolio-lib = "^4.1.1"
jinja2 = "^3.1.2"
getfamafrenchfactors = "^0.0.5"
pyomo = "^6.5.0"
cvxpy = "^1.3.1"
quant-invest-lab = "^0.2.8"
alphalens = "^0.4.0"
cvxsimulator = "^0.3.4"
networkx = "^3.1"
macrosynergy = "^0.0.34"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
